# MIMXRT1064

./: Cargo.toml  Embed.toml  MIMXRT1064.yaml  build.rs  config.toml  imxrt1064.json  memory.x
cargo/: config.toml
src/: build.rs  main.rs
