[package]
name = "NXP1064-example"
version = "0.1.0"
edition = "2021"


[dependencies]

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}


cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.3"
defmt-rtt = "0.4.1"
imxrt-ral = "0.5.3"
imxrt-rt = "0.1"
imxrt1060evk-fcb = "0.1.0"



panic-halt = "0.2"
rtt-target = "0.5.0"




[build-dependencies]
bindgen = "0.65.1"
imxrt-rt = "0.1"




