[package]
name = "NXP1064-example"
version = "0.1.0"
edition = "2021"


[dependencies]

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}


cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
critical-section = "1.1.3"
defmt-rtt = "0.4.1"
imxrt-boot-gen = {version="0.3.2",features=["imxrt1064"]}
imxrt-hal = { version = "0.5", features = ["imxrt1064"] }
imxrt-ral = { version = "0.5", features = ["imxrt1064", "rt"] }
imxrt-rt = { version = "0.1", features = ["device"] }
#imxrt1060evk-fcb = "0.1.0"



panic-halt = "0.2"
rtt-target = "0.5.0"




[build-dependencies]
bindgen = "0.65.1"
imxrt-rt = { version = "0.1", features = ["device"] }







